--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,6 +178,7 @@ border: none;
 }
 .goat-sec{
     display: flex;
+    background-color:#8C57EE0D, #F144AE0D;
 }
 
 @media screen and (max-width: 425px) {
@@ -197,4 +198,235 @@ border: none;
 
     
 
+}
+.funny-sec{
+    margin-top: 200px;
+    height: 700px;
+  
+
+}
+.funny-text{
+    justify-content: center;
+    height: 170px;
+   text-align: center;
+   padding-top: 70px;
+
+  
+}
+.funny-img{
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+   
+   
+  
+}
+
+.funny-img img{
+    border: 5px solid transparent;
+    border-radius: 20px;
+    position: relative;
+
+}
+
+.funny-img img:hover{
+    border: 5px solid magenta;
+    /* background-image: url('/images/Rectangle\ 4.png'), */
+    /* linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.8)); */
+    
+     background-blend-mode: overlay; 
+  
+background: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+   
+    
+}
+
+
+.text-gradient{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+font-family: Work Sans;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+.instant-sec{
+    height: 700px;
+ 
+    display: flex;
+    gap: 20px;
+    margin-top: 200px;
+    
+}
+.instant-text{
+    text-align: center;
+    width: 50%;
+    height: 500px;
+   /* padding top:  150px ; */
+   margin: 150px auto;
+   align-items: center;
+    align-content: center;
+    
+}
+.instant-text h1{
+    /* text-align:  center; */
+    justify-content: center;
+    align-items: center;
+   /* padding-top: 200px;
+   padding-right: 200px; */
+   /* text-align: right; */
+font-family: Work Sans;
+font-size: 48px;
+
+font-weight: 700;
+margin-bottom: 40px;
+
+}
+
+.instant-text p{
+    justify-content: center;
+}
+
+.parent{
+    position: relative;
+    margin: 50px;
+}
+.child{
+    position: absolute;
+    top: 400px;
+    right: 400px;
+}
+
+.btn-sec{
+    height: 400px;
+  
+    align-items: center;
+    align-content: center;
+    margin-top: 400px;
+}
+
+.btn-row1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin: 70px auto;
+}
+.btn-row2{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+.btn{
+    width: 248px;
+height: 80px;
+border-radius: 50px;
+background-color: transparent;
+ position: relative; 
+border: transparent;
+
+}
+.btn-img{
+    width: 50px;
+    height: 50px;
+   
+    border-radius: 50%;
+    position: absolute; 
+    /* right: 1300px; */
+    border: 2px solid red;
+        
+   
+ 
+}
+
+/* .img1{
+    display: flex;
+    text-align: center;} */
+
+.text{
+    color: #0B0223;
+font-family: Work Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+}
+.btn:hover{
+    border: 3px solid palevioletred;
+    text-decoration: palevioletred;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+.footer{
+    height: 700px;
+    border: 2px solid red;
+    background-color:  #0B0223;
+}
+
+.foot-head{
+    padding-top: 120px;
+    display: flex;
+     justify-content: center; 
+     gap: 10px;
+}
+
+footer button{
+    color: #FFF;
+   
+text-align: center;
+font-family: Work Sans;
+font-size: 18px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+background-color:  #0B0223;
+    border: none;
+   
+}
+
+.foot-btn{
+    /* justify-content: center; */
+    align-items: center;
+    display: inline-flex;
+padding: 10px;
+/* align-items: center; */
+gap: 60px;
+margin-top: 40px;
+margin-left: 400px;
+
+}
+
+footer{
+    justify-content: center;
+    align-items: center;
+}
+
+.foot-icon{
+  
+  
+  margin-top: 40px;
+  
+  justify-content: center;
+  display: flex;
+  
+
+
+}
+
+.last-p{
+    margin-top: 30px;
+    color: rgba(255, 255, 255, 0.60);
+text-align: center;
+font-family: Work Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
 }
