--- a/styles/styles.css
+++ b/styles/styles.css
@@ -211,10 +211,10 @@ border: none;
     position: relative;
 
 }
-.img-parent{
+/* .img-parent{
     position: relative;
-}
-.img-child{
+} */
+/* .img-child{
     
     position: absolute;
     top: 175px;
@@ -222,7 +222,48 @@ border: none;
     text-align: center;
   display: none;
     border: 2px solid greenyellow;
+} */
+
+.image{
+    position: relative;
 }
+.img-icon1{
+    position: absolute;
+    border: 5px solid magenta;
+    border-radius: 10px;
+    height: 400px;
+    width: 340px;
+    bottom: 300px;
+    right: 70px; 
+
+    align-items: center;
+    background-color: rgb(32, 28, 28);
+    opacity: 0;
+
+}
+
+
+
+.img-icon2{
+    position: absolute;
+    border: 5px solid magenta;
+    border-radius: 10px;
+     height: 400px;  
+    /* height: 25rem; */
+    width: 340px;
+    bottom: -1030px; 
+   
+     right: 760px;
+      /* bottom: 20rem; */ 
+    align-items: center;
+    background-color: rgb(32, 28, 28);
+    opacity: 0;
+    
+}
+.img-icon2:hover{
+    opacity: 1;
+}
+
 
 
 
@@ -230,15 +271,12 @@ border: none;
 .funny-img img:hover{
     border: 5px solid magenta;
  
-    display: block;
-    visibility: visible;
-     
-
-    
-  
-
-    
+    /* display: block; */
+    /* visibility: visible; */
+        
 }
+
+
 
 
 .text-gradient{
@@ -313,7 +351,7 @@ margin-bottom: 40px;
     justify-content: center;
     align-items: center;
     align-content: center;
-    margin: 70px auto;
+    /* margin: 70px auto; */
 }
 .btn-row2{
     display: flex;
@@ -321,7 +359,7 @@ margin-bottom: 40px;
     align-content: center;
 }
 .btn{
-    width: 248px;
+    width: 248px; 
 height: 80px;
 border-radius: 50px;
 background-color: transparent;
